<resources>
    <string name="app_name">WeekPlanner</string>
    <string name="todo_page">todo</string>
    <string name="mo">Mon</string>
    <string name="tu">Tue</string>
    <string name="we">Wen</string>
    <string name="th">Thu</string>
    <string name="fr">Fri</string>
    <string name="sa">Sat</string>
    <string name="su">Sun</string>
    <string name="todo_page_title">Daily Plan</string>
    <string name="question">What do you want to do next?</string>
    <string name="set_time">set time</string>
    <string name="time">Time</string>
    <string name="hello">Hello</string>
    <string name="done">Done</string>
</resources>
