<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.weekplanner.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/todo_page_title" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/todo_tab_mo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mo" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/todo_tab_tu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tu" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/todo_tab_we"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/todo_tab_th"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/th" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/todo_tab_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fr" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/todo_tab_sa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sa" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/todo_tab_su"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/su" />


        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <ListView
        android:id="@+id/list_todo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>